[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = "A template for Python projects."
authors = ["Xithrius <xithrius@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.9"

[tool.poetry.dev-dependencies]
flake8 = "6.0.0"
flake8-annotations = "3.0.0"
flake8-bugbear = "23.2.13"
flake8-docstrings = "1.7.0"
flake8-string-format = "0.3.0"
flake8-tidy-imports = "4.8.0"
flake8-todo = "0.7"
flake8-isort = "6.0.0"
pep8-naming = "0.13.3"
pre-commit = "3.0.4"
taskipy = "1.10.3"
black = "23.1.0"
pyright = "1.1.293"
isort = "5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
start = "python -m project"
lint = "pre-commit run --all-files"
precommit = "pre-commit install"

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
multi_line_output = 6
order_by_type = false
case_sensitive = true
combine_as_imports = true
line_length = 120
atomic = true

[tool.pyright]
include = ["project/**/*.py"]
exclude = ["**/__pycache__"]

typeCheckingMode = "strict"
# reportMissingTypeStubs = false
